Don't allow <use> <text> references in clip-path fast-path

The fast-path can't handle <text>, but a <use> referencing <text> was
not properly checked resulting in an incorrect clip.
Make the requiresMask(...) helper handle <use> elements and check the
referenced element.

BUG=604677,604679

Review-Url: https://codereview.chromium.org/2560773002
Cr-Commit-Position: refs/heads/master@{#436941}

Former-commit-id: e139f0e0cd2bcb12d398d05a3ddaf32de010477b